removed temp --fix from lint

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "test:unit": "mocha test/unit/*.spec.ts --require ts-node/register",
     "test:integration": "mocha test/integration/*.ts --slow 5000 --timeout 20000 --require ts-node/register",
     "test:coverage": "nyc npm run test:unit",
-    "lint:src": "eslint src/ --fix --ext .ts",
-    "lint:test": "eslint test/ --fix --ext .ts",
+    "lint:src": "eslint src/ --ext .ts",
+    "lint:test": "eslint test/ --ext .ts",
     "apidocs": "run-s api-extractor:local api-documenter",
     "api-extractor": "node generate-reports.js",
     "api-extractor:local": "npm run build && node generate-reports.js --local",
